--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CoFit-19</string>
     <string name="title_activity_nearby">Map</string>
+    <string name="title_activity_view_directions">Map</string>
 </resources>
